docs: fix: /api/coordinates
